--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>زيارة لموبي سكرين</title>
-    <meta charset="utf-8">
-    <style>
-      body { height: 2000px; font-family: Arial; text-align: center; }
-      button { margin-top: 100px; padding: 20px; font-size: 20px; }
-    </style>
-  </head>
-  <body>
-    <h1>جاري التفاعل مع الموقع...</h1>
-    <button onclick="window.location.href='https://mobyscreener.com/?ref=MOBY64631861'">ادخل الآن</button>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>زيارة mobyscreener</title>
+  <style>
+    body { margin: 0; padding: 0; }
+    iframe { width: 100%; height: 100vh; border: none; }
+  </style>
+</head>
+<body>
 
-    <script>
-      // Scroll بعد 5 ثواني
-      setTimeout(() => {
-        window.scrollTo({ top: 1000, behavior: 'smooth' });
-      }, 5000);
+  <!-- iframe لعرض موقع mobyscreener -->
+  <iframe id="mobiframe" src="https://mobyscreener.com/?ref=MOBY64631861"></iframe>
 
-      // Click تلقائي بعد 10 ثواني
-      setTimeout(() => {
-        document.querySelector('button').click();
-      }, 10000);
-    </script>
-  </body>
+  <script>
+    // بعد 8 ثواني، نحاول نرسل scroll
+    setTimeout(() => {
+      try {
+        // غير ممكن بسبب حماية X-Frame-Options
+        document.getElementById('mobiframe').contentWindow.scrollTo({ top: 800, behavior: 'smooth' });
+      } catch (err) {
+        console.log("⛔ لا يمكن تنفيذ scroll داخل iframe: الموقع محمي (CORS/XFO)");
+      }
+    }, 8000);
+
+    // بعد 14 ثانية، نحاول نضغط على عملة
+    setTimeout(() => {
+      try {
+        let doc = document.getElementById('mobiframe').contentDocument || document.getElementById('mobiframe').contentWindow.document;
+        let links = doc.querySelectorAll("a[href*='/coin/']");
+        if (links.length > 0) {
+          links[Math.floor(Math.random() * links.length)].click();
+        }
+      } catch (e) {
+        console.log("⛔ لا يمكن الوصول إلى العناصر داخل iframe بسبب الحماية");
+      }
+    }, 14000);
+  </script>
+
+</body>
 </html>
