--- a/index.html
+++ b/index.html
@@ -1,64 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>زيارة تلقائية</title>
+  <title>تفاعل ذكي | Mobyscreener</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 100px;
+    * {
+      box-sizing: border-box;
+      font-family: Tahoma, sans-serif;
     }
-    #start {
-      display: none;
-      padding: 15px 30px;
-      background-color: green;
-      color: white;
-      font-size: 18px;
+    body {
+      margin: 0;
+      display: flex;
+      height: 100vh;
+      background: #f9f9f9;
+    }
+    #control {
+      width: 30%;
+      padding: 30px 20px;
+      background: linear-gradient(145deg, #ececec, #ffffff);
+      border-left: 1px solid #ccc;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    #control h2 {
+      color: #333;
+      margin-bottom: 20px;
+    }
+    #status {
+      font-size: 20px;
+      font-weight: bold;
+      color: #007bff;
+      margin-top: 10px;
+    }
+    #frame {
+      width: 70%;
+      height: 100vh;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
       border: none;
-      cursor: pointer;
-      border-radius: 8px;
     }
   </style>
 </head>
 <body>
+  <div id="control">
+    <h2>⏳ انتظر قليلاً، جاري التفاعل مع الموقع...</h2>
+    <p id="status">يبدأ التفاعل بعد 10 ثواني</p>
+  </div>
 
-  <h2>⏳ انتظر قليلاً، جاري فتح الموقع...</h2>
-  <p id="status">سيتم التفاعل بعد ثوانٍ...</p>
-  <button id="start">🔁 تفاعل الآن</button>
+  <div id="frame">
+    <iframe id="site" src="https://mobyscreener.com/?ref=MOBY64631861"></iframe>
+  </div>
 
   <script>
-    // روابط المواقع
-    const links = [
-      "https://mobyscreener.com/?ref=MOBY64631861",
-      "https://mahalux.xyz/",
-      "https://t.co/0SzTedBuIM"
-    ];
-
-    // اختيار رابط عشوائي
-    const target = links[Math.floor(Math.random() * links.length)];
-
-    // الانتظار 10 ثواني ثم إظهار زر التفاعل
-    setTimeout(() => {
-      document.getElementById("status").innerText = "👇 اضغط على الزر لتفعيل التفاعل داخل الموقع";
-      document.getElementById("start").style.display = "inline-block";
-    }, 10000);
-
-    // عند الضغط على الزر
-    document.getElementById("start").onclick = () => {
-      // فتح الموقع في نافذة جديدة
-      const win = window.open(target, "_blank");
-
-      // نرسل له سكريبت scroll + click
-      setTimeout(() => {
-        try {
-          win.scrollTo({ top: 600, behavior: "smooth" });
-        } catch (err) {
-          console.log("⚠️ لا يمكن التفاعل داخل النافذة الجديدة بسبب حماية الموقع.");
-        }
-      }, 3000);
-    };
+    let count = 10;
+    const status = document.getElementById("status");
+    const interval = setInterval(() => {
+      count--;
+      if (count > 0) {
+        status.innerText = `يبدأ التفاعل بعد ${count} ثواني`;
+      } else {
+        status.innerText = "✅ تم فتح الموقع بنجاح... جاري التفاعل";
+        clearInterval(interval);
+      }
+    }, 1000);
   </script>
-
 </body>
 </html>
