--- a/index.html
+++ b/index.html
@@ -1,104 +1,51 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>محاكي التصفح</title>
+<title>Auto Scroll & Click</title>
 <style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        display: flex;
-        height: 100vh;
-    }
-    #viewer {
-        flex: 1;
-        border: none;
-    }
-    #control-panel {
-        width: 300px;
-        background: #111;
-        color: #fff;
-        padding: 15px;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-    }
-    label {
-        font-size: 14px;
-    }
-    input, button, select {
-        padding: 8px;
-        font-size: 14px;
-        border: none;
-        outline: none;
-    }
-    button {
-        background: #28a745;
-        color: white;
-        cursor: pointer;
-    }
-    button:disabled {
-        background: #555;
-        cursor: not-allowed;
-    }
+iframe {
+    width: 100%;
+    height: 90vh;
+    border: none;
+}
 </style>
 </head>
 <body>
 
-<!-- الجهة الأولى: الموقع -->
-<iframe id="viewer" src="https://mahalux.xyz" sandbox="allow-scripts allow-same-origin allow-forms"></iframe>
-
-<!-- الجهة الثانية: لوحة التحكم -->
-<div id="control-panel">
-    <h3>لوحة تحكم السكريبت</h3>
-
-    <label>مدة الانتظار (ثواني):</label>
-    <input type="number" id="waitTime" value="10">
-
-    <label>رابط العملة:</label>
-    <input type="text" id="coinUrl" value="https://www.mobyscreener.com/solana/9zZWnw2DbJyxFZNa2Qhkh2a5zKDX">
-
-    <button id="startBtn">ابدأ السكريبت</button>
-    <button id="stopBtn" disabled>إيقاف</button>
-
-    <p id="status">الحالة: متوقف</p>
-</div>
+<iframe id="siteFrame" src="https://mahalux.xyz/"></iframe>
 
 <script>
-let scriptRunning = false;
+const iframe = document.getElementById("siteFrame");
 
-document.getElementById("startBtn").addEventListener("click", () => {
-    scriptRunning = true;
-    document.getElementById("status").innerText = "الحالة: جارٍ التنفيذ...";
-    document.getElementById("startBtn").disabled = true;
-    document.getElementById("stopBtn").disabled = false;
+iframe.onload = function () {
+    console.log("✅ الموقع تحمّل داخل الإطار");
 
-    const iframe = document.getElementById("viewer");
-    const waitTime = parseInt(document.getElementById("waitTime").value) * 1000;
-    const coinUrl = document.getElementById("coinUrl").value;
-
+    // الانتظار قبل التفاعل (5 ثواني)
     setTimeout(() => {
-        if (!scriptRunning) return;
+        try {
+            const frameDoc = iframe.contentWindow.document;
 
-        // محاولة عمل Scroll
-        iframe.contentWindow.scrollBy(0, 300);
+            // سكرول عشوائي
+            const maxScroll = frameDoc.body.scrollHeight - iframe.clientHeight;
+            const randomScroll = Math.floor(Math.random() * maxScroll);
+            iframe.contentWindow.scrollTo(0, randomScroll);
+            console.log("📜 سكرول تم");
 
-        setTimeout(() => {
-            if (!scriptRunning) return;
-            iframe.src = coinUrl; // فتح صفحة العملة
-            document.getElementById("status").innerText = "تم الدخول على العملة";
-        }, 2000);
-    }, waitTime);
-});
-
-document.getElementById("stopBtn").addEventListener("click", () => {
-    scriptRunning = false;
-    document.getElementById("status").innerText = "الحالة: متوقف";
-    document.getElementById("startBtn").disabled = false;
-    document.getElementById("stopBtn").disabled = true;
-});
+            // البحث عن روابط العملات (تغيير selector إذا لزم)
+            const coinLinks = frameDoc.querySelectorAll("a[href*='/solana/']");
+            if (coinLinks.length > 0) {
+                const randomCoin = coinLinks[Math.floor(Math.random() * coinLinks.length)];
+                randomCoin.click();
+                console.log("💰 تم النقر على عملة");
+            } else {
+                console.log("⚠ لم يتم العثور على روابط العملات");
+            }
+        } catch (err) {
+            console.error("❌ لا يمكن الوصول لمحتوى iframe (حماية CORS)");
+        }
+    }, 5000);
+};
 </script>
 
 </body>
