--- a/index.html
+++ b/index.html
@@ -1,52 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Auto Scroll & Click</title>
-<style>
-iframe {
-    width: 100%;
-    height: 90vh;
-    border: none;
-}
-</style>
-</head>
-<body>
-
-<iframe id="siteFrame" src="https://mahalux.xyz/"></iframe>
-
-<script>
-const iframe = document.getElementById("siteFrame");
-
-iframe.onload = function () {
-    console.log("✅ الموقع تحمّل داخل الإطار");
-
-    // الانتظار قبل التفاعل (5 ثواني)
+// سكريبت أوتوماتيكي كامل
+window.addEventListener('load', function () {
+    // مهلة قصيرة باش الصفحة تكمل تحميلها
     setTimeout(() => {
-        try {
-            const frameDoc = iframe.contentWindow.document;
+        // سكرول تدريجي لأسفل الصفحة
+        let scrollInterval = setInterval(() => {
+            window.scrollBy(0, 50);
+            if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+                clearInterval(scrollInterval);
 
-            // سكرول عشوائي
-            const maxScroll = frameDoc.body.scrollHeight - iframe.clientHeight;
-            const randomScroll = Math.floor(Math.random() * maxScroll);
-            iframe.contentWindow.scrollTo(0, randomScroll);
-            console.log("📜 سكرول تم");
-
-            // البحث عن روابط العملات (تغيير selector إذا لزم)
-            const coinLinks = frameDoc.querySelectorAll("a[href*='/solana/']");
-            if (coinLinks.length > 0) {
-                const randomCoin = coinLinks[Math.floor(Math.random() * coinLinks.length)];
-                randomCoin.click();
-                console.log("💰 تم النقر على عملة");
-            } else {
-                console.log("⚠ لم يتم العثور على روابط العملات");
+                // بعد ما يوصل للأسفل، يختار عملة عشوائية
+                setTimeout(() => {
+                    let coins = document.querySelectorAll('a, button, div');
+                    coins = Array.from(coins).filter(el => el.innerText && el.innerText.match(/\b[A-Z]{2,5}\b/)); // نصوص مختصرة مثل BTC, ETH
+                    if (coins.length > 0) {
+                        let randomCoin = coins[Math.floor(Math.random() * coins.length)];
+                        randomCoin.click();
+                        console.log('✅ تم النقر على عملة:', randomCoin.innerText);
+                    } else {
+                        console.log('❌ لم يتم العثور على عملات');
+                    }
+                }, 1000);
             }
-        } catch (err) {
-            console.error("❌ لا يمكن الوصول لمحتوى iframe (حماية CORS)");
-        }
-    }, 5000);
-};
-</script>
-
-</body>
-</html>
+        }, 100);
+    }, 2000);
+});
